--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
+        <img class=”cabecalho-imagem” src="./img/alurastart logo 1.png" alt="logo da alura start">
        <hl>Vai ser uma imagem</hl>
-            <ul>
-                <li>Estudantes</li>
-                <li>Escola</li>
+            <ul class="cabecalho-lista-item">
+                <li class="cabecalho-lista-item">Estudantes</li>
+                <li class="cabecalho-lista-item">Escola</li>
             </ul>
     </header>
 </body>
